# PyPoisson2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_cn.md  setup.py
poisson/src/: Wrapper.cpp
poisson/tests/: README.md  geometry_utils.py  run_consistency_tests.py  test_data_generator.py  test_phase1_consistency.py  test_phase2_boundary.py  test_phase2_boundary_comprehensive.py  test_phase3_advanced_outputs.py  test_poisson.py  validation_phase1.py
poisson/tests/exe/: test_dump_outputs.py  test_exe_boundary.py  test_exe_consistency_core.py  test_exe_consistency_params.py
poisson/tests/python/: test_python_validation.py
poisson/tests/utils/: data_gen.py  dump_reader.py  exe_runner.py
poisson_dump/: CMakeLists.txt
